PAY-075: Remove AppId  (#151)
* PAY-075: Removed AppId from majority of the code with little refractor

* PAY-075: Remove appId from API contract, add feeId-to-tcsAppId mapping, and clean up stale TCS_APP_ID references across CI/CD and docs

* Update docs/diagrams/get-details-flow.drawio


* Revert "Update docs/diagrams/get-details-flow.drawio"

This reverts commit dde795ae1d837566c4f6a7ae7fe30d93cc1b2c97.

* PAY-075: resolved comments from copilot

* PAY-075: removed comments from processpayment and getDetails

* PAY-075: resolved comments left On PR by reviewer

* PAY-075: Resolved comments regarding mismatched pngs, and generated openapi files

* PAY-075: added transactionreferenceID and metadata back

* PAY-075: updated comment

* PAY-075: Updated test

---------
